--- a/src/components/Monney.css
+++ b/src/components/Monney.css
@@ -20,7 +20,7 @@
   color: white;
 }
 .Products {
-  background-color: #f6f6f7;
+  background-color: #828293;
   padding: 3rem 0;
 }
 .Product-item {
