--- a/src/components/Monney.css
+++ b/src/components/Monney.css
@@ -64,3 +64,16 @@
 .Product-item .product_title .Action .buyBtn:hover {
   background-color: rgb(204, 252, 200);
 }
+.Products .Receipt {
+  text-align: center;
+  color: beige;
+}
+.Products .Receipt .receipt_title {
+  font-size: 20px;
+  font-weight: 400;
+}
+.Products .Receipt button {
+  padding: 5px 10px;
+  margin: 10px;
+  border-radius: 5px;
+}
